--- a/HTML Social Media Project/resources/styles.css
+++ b/HTML Social Media Project/resources/styles.css
@@ -6,6 +6,32 @@ body {
   width: auto;
 }
 
+#logo {
+  float: left;
+  border-radius: 50%;
+  max-width: 10%;
+  max-height: 10%;
+  cursor: pointer;
+}
+
+#menu {
+  background-color: cornflowerblue;
+  padding: 4px 0 4px 0;
+  margin: 0;
+  text-align: left;
+  white-space: nowrap;
+  font-size: 1.5em;
+}
+
+#menu a {
+  text-decoration: none; 
+  color:aliceblue;
+}
+
+a:hover {
+  font-variant-caps: small-caps;
+}
+
 /* Login CSS */
 
 #output {
@@ -41,4 +67,23 @@ input:focus {
 
 #password {
   -webkit-text-security: disc;
+}
+
+/* Button CSS */
+
+#createButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px; 
+    z-index: 100;
+    border: none;
+    background-color: blue;
+    color: white;
+    cursor: pointer;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+#createButton:hover {
+    background-color: darkgray;
 }
